Convert into a Vite based project

--- a/index.html
+++ b/index.html
@@ -1,204 +1,16 @@
 <!DOCTYPE html>
-<html lang="en-us" class="dark overscroll-none">
+<html lang="en" class="dark overscroll-none">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Draw in React</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-    <!-- Don't use this in production: -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <link href="/src/styles.css" rel="stylesheet">
+    <title>Draw in React</title>
   </head>
-  <body class="@container overscroll-none">            
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--script type="text/babel" data-preset="env,typescript" src="particle.ts"></script-->
-    <script type="text/babel" data-preset="env,react">
-        const { useLayoutEffect, useState, StrictMode } = React;
-        var ctx = null;
-        
-        function MenuItem({selectedType, setSelectedType, type, label}) {
-            const id = `tool-${type}`
-            return (
-                <div>
-                    <label htmlFor={id} className="flex cursor-pointer items-center justify-center rounded-md border border-gray-100 bg-white px-3 py-2 text-gray-900 hover:border-gray-200 has-[:checked]:border-blue-500 has-[:checked]:bg-blue-500 has-[:checked]:text-white">
-                        <input name="tool" id={id} type="radio" className="sr-only" checked={selectedType === type} onChange={()=>setSelectedType(type)} />
-                        <p className="text-sm font-medium">{label}</p>
-                    </label>
-                </div>
-            )
-        }
-
-        function Menu({selectedType, setSelectedType}) {
-            return (
-            <nav className="fixed m-2">
-                <fieldset className="flex flex-wrap gap-3">
-                    <legend className="sr-only">Tools</legend>
-                    <MenuItem selectedType={selectedType} setSelectedType={setSelectedType}
-                        type="line"
-                        label="Line"
-                    />
-                    <MenuItem selectedType={selectedType} setSelectedType={setSelectedType}
-                        type="rect"
-                        label="Rect"
-                    />
-                    <MenuItem selectedType={selectedType} setSelectedType={setSelectedType}
-                        type="ellipse"
-                        label="Ellipse"
-                    />
-                    <MenuItem selectedType={selectedType} setSelectedType={setSelectedType}
-                        type="arrow"
-                        label="Arrow"
-                    />
-                    <div className="flex items-center">
-                        <p>Save the image by using clicking with left button and use your browser save image feature.</p>
-                    </div>
-                </fieldset>
-            </nav>
-            );
-        }
-
-        function createElement(id, type, a, b) {
-            return {id, type, a, b};
-        }
-
-        function calcWidthAndHeight(element) {
-            const [x1, y1] = Object.values(element.a);
-            const [x2, y2] = Object.values(element.b);
-            return [
-                x2 > x1 ? x2 - x1 : x1 - x2,
-                y2 > y1 ? y2 - y1 : y1 - y2
-            ];
-        }
-
-        function calcAngle({a, b}) {
-            const [x1, y1] = Object.values(a);
-            const [x2, y2] = Object.values(b);
-            const dx = x2 - x1;
-            const dy = y2 - y1;
-            return Math.atan2(dy, dx);
-        }
-
-        function App() {
-            const [elements, setElements] = useState([]);
-            const [drawing, setDrawing] = useState(false);
-            const [selectedType, setSelectedType] = useState("line");
-
-            useLayoutEffect(() => {
-                const canvas = document.getElementById("canvas");
-                ctx = canvas.getContext("2d");
-                const menu = document.querySelector("input[name='tool']:checked");
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-                ctx.fillStyle = "black";
-                ctx.strokeStyle = "black";
-                ctx.lineWidth = "3";
-                ctx.lineCap = "round";
-
-                elements.forEach(element => {
-                    if(element.type === "line") {
-                        ctx.beginPath();
-                        ctx.moveTo(...Object.values(element.a));
-                        ctx.lineTo(...Object.values(element.b));
-                        ctx.stroke();
-                    }
-                    if(element.type === "rect") {
-                        ctx.strokeRect(...Object.values(element.a), ...calcWidthAndHeight(element));
-                    }
-                    if(element.type==="ellipse") {
-                        ctx.beginPath();
-                        ctx.ellipse(...Object.values(element.a), ...calcWidthAndHeight(element), 0,  2 * Math.PI, false);
-                        ctx.stroke();
-                    }
-                    if(element.type==="arrow") {
-                        const headlen = 30;
-                        const angle = calcAngle(element);
-                        ctx.beginPath();
-                        ctx.moveTo(...Object.values(element.a));
-                        ctx.lineTo(...Object.values(element.b));
-                        //ctx.stroke();
-                        const [bx, by] = Object.values(element.b);
-
-                        //ctx.beginPath();
-                        ctx.moveTo(...Object.values(element.b));
-                        ctx.lineTo(bx - headlen * Math.cos(angle - Math.PI / 6), by - headlen * Math.sin(angle - Math.PI / 6));
-                        //ctx.strokeStyle = "green";
-                        //ctx.stroke();
-
-                        //ctx.beginPath();
-                        ctx.moveTo(...Object.values(element.b));
-                        //ctx.strokeStyle = "red";
-                        ctx.lineTo(bx - headlen * Math.cos(angle + Math.PI / 6), by - headlen * Math.sin(angle + Math.PI / 6));
-                        ctx.stroke();
-
-                        ctx.strokeStyle = "black";
-                        ctx.setTransform(1, 0, 0, 1, 0, 0);
-                    }
-                });
-            }, [elements]);
-
-            const handleMouseDown = (event) => {
-                if(drawing && event.buttons == 5) {
-                    setDrawing(false);
-                    setElements(prevState => [...prevState.slice(0,-1)])
-                    return;
-                }
-                setDrawing(true);
-                const { clientX, clientY } = event;
-                const element = createElement(elements.length, selectedType, {clientX, clientY}, {clientX, clientY});
-                setElements(prevState => [...prevState, element]);
-            };
-            const handleMouseMove = (event) => {
-                if(!drawing) return;
-
-                const { clientX, clientY } = event;
-
-                const lastElement = elements.pop(-1);
-                const newElement = {
-                    ...lastElement,
-                    b: { clientX, clientY }
-                };
-                setElements([...elements, newElement]);
-            };
-            const handleMouseUp = (event) => {
-                if(!drawing) return;
-                setDrawing(false);
-            };
-            const handleMouseOut = (event) => {
-                if(drawing) setDrawing(false);
-            }
-
-            return (
-        <>
-            <Menu selectedType={selectedType} setSelectedType={setSelectedType} />
-            <canvas id="canvas" 
-                width={window.innerWidth}
-                height={window.innerHeight}
-                onMouseDown={handleMouseDown}
-                onMouseMove={handleMouseMove}
-                onMouseUp={handleMouseUp}
-                onMouseOut={handleMouseOut}>
-                Canvas not supported :(
-            </canvas>
-        </>
-            );
-        }
-
-        const container = document.getElementById('root');
-        const root = ReactDOM.createRoot(container);
-        root.render(<StrictMode><App /></StrictMode>);
-    </script>
-    <!--
-      Note: this page is a great way to try React but it's not suitable for production.
-      It slowly compiles JSX with Babel in the browser and uses a large development build of React.
-
-      Read this page for starting a new React project with JSX:
-      https://react.dev/learn/start-a-new-react-project
-
-      Read this page for adding React with JSX to an existing project:
-      https://react.dev/learn/add-react-to-an-existing-project
-    -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
