Prevent overscrolling to stop the gesture on mobile Chrome to reload the page.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="/src/styles.css" rel="stylesheet">
     <title>Draw in React</title>
   </head>
-  <body>
+  <body class="@container overscroll-none">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
